--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^19.2.4",
     "@google/genai": "^1.38.0",
     "lucide-react": "^0.563.0",
-    "exceljs": "4.4.0"
+    "exceljs": "4.4.0",
+    "jszip": "3.10.1",
+    "buffer": "6.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
