feat: Implement admin panel with glossary, blacklist, and user management features
- Added AdminPage component for managing glossary terms, blacklist items, and users.
- Integrated API calls for fetching, adding, deleting, and toggling status of glossary and blacklist items.
- Implemented user management functionalities including toggling user status.
- Created AuthModal for user authentication with login and registration options.
- Added GoogleCallback component to handle Google authentication.
- Developed LoginPage for user login and registration with Google sign-in option.
- Established apiClient for handling API requests with token management and error handling.
- Introduced translationClient for text translation and OCR functionalities.
- Configured Dockerfile for containerized application setup.
- Added .env file for environment variable configuration.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.38.0",
+    "axios": "^1.13.4",
     "buffer": "6.0.3",
     "docx-preview": "^0.3.7",
     "driver.js": "^1.4.0",
