--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/jest": "^29.5.3",
     "@vitejs/plugin-react": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.2",
